# ROS2-VLA_Bridge

./: Dockerfile  README.md  environment.yml  old_Dockerfile  single_multimode.yaml
Backend/: README_VLA_Wrapper.md  vla_server.py  vla_wrapper.py
Bridge/: README_Bridge.md  setup.py
Bridge/vla_client/: CMakeLists.txt  cartesian_controller_control_stack.txt  colcon.pkg  package.xml  setup.cfg  setup.py
Bridge/vla_client/config/: real.yaml  single_multimode.yaml
Bridge/vla_client/launch/: launch_all.launch.py
Bridge/vla_client/nodes/: vla_bridge_node.py
Bridge/vla_client/vla_client/nodes/: vla_bridge_node.py
Bridge/vla_interfaces/: CMakeLists.txt  package.xml
Bridge/vla_interfaces/srv/: SetPrompt.srv  SetRequest.srv
ROS2-VLA_Bridge_Requester/: Dockerfile  README_Requester.md  package.xml  setup.cfg
ROS2-VLA_Bridge_Requester/docker_ros2_jazzy_VLA_Bridge/: Dockerfile
ROS2-VLA_Bridge_Requester/ros2_vla_bridge_requester/: vla_requester_node.py
Requester/: README_Requester.md  package.xml  setup.py
Requester/ros2_vla_bridge_requester/: vla_requester_node.py
Wrapper/: app.py  vla_wrapper.py
logs/: eval.py  record01_1Hz_go_up.csv  record02_1Hz_go_down.csv  record03_1Hz_yaw_right.csv  record04_1Hz_yaw_left.csv  record05_1Hz_pitch_up.csv  record06_1Hz_pitch_down.csv  record07_1Hz_rol_right.csv  record08_1Hz_rol_left.csv  record09_1Hz_close_gripper.csv  record10_1Hz_open_gripper.csv  record11_5Hz_go_up.csv  record12_5Hz_go_down.csv  record13_5Hz_yaw_right.csv  record14_5Hz_yaw_left.csv  record15_5Hz_pitch_up.csv  record16_5Hz_pitch_down.csv  record17_5Hz_rol_right.csv  record18_5Hz_rol_left.csv  record19_5Hz_close_gripper.csv  record20_5Hz_open_gripper.csv  record21_2Hz_duplo.csv  record22_1Hz_duplo.csv  record23_5Hz_duplo.csv  record24_1Hz_duplo_camera_left.csv  record25_2Hz_duplo_camera_left.csv  record26_5Hz_duplo_camera_left.csv  record27_1Hz_duplo_no_finetuning.csv  record28_2Hz_duplo_no_finetuning.csv  record29_5Hz_duplo_no_finetuning.csv  record30_1Hz_duplo_no_finetuning_camera_left.csv  record31_2Hz_duplo_no_finetuning_camera_left.csv  record32_5Hz_duplo_no_finetuning_camera_left.csv  record33_2Hz_cube_no_finetuning_camera_left.csv  record34_2Hz_cube_no_finetuning.csv  records.csv  vla_timings.csv
logs/eval_out/data/: kpis_record01_1Hz_go_up.csv  kpis_record02_1Hz_go_down.csv  kpis_record03_1Hz_yaw_right.csv  kpis_record04_1Hz_yaw_left.csv  kpis_record05_1Hz_pitch_up.csv  (+31 more)
