<?xml version="1.0"?>
<package format="3">
  <name>ros2_vla_bridge_requester</name>
  <version>0.0.0</version>
  <description>Empty VLA requester node package</description>
  <maintainer email="unknown@example.com">UNKNOWN</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
