<?xml version="1.0"?>
<package format="3">
  <name>vla_client</name>
  <version>0.0.1</version>
  <description>ROS2 node to interface with a VLA backend and publish motion commands</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>multi_mode_control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vla_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>